Fix covered menu links

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,8 @@
 }
 
 .navbar {
+    background-color: white;
     height: 6.4rem;
-    z-index: 10;
 }
 
 .brand-logo {
@@ -305,6 +305,7 @@ img {
 .bg-trans {
     background-color: transparent;
     padding: 6rem 2rem;
+    margin-top: 6rem;
     transform: skewY(-6deg);
     z-index: 5;
 }
